# journey

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  idea.md  initial-spec.md
.github/workflows/: release.yml
docs/: homebrew-publishing.md
docs/superpowers/plans/: 2026-06-23-single-window-tui.md  2026-06-23-unified-fzf-starter.md
docs/superpowers/specs/: 2026-06-23-unified-fzf-starter-design.md
src/: app.rs  cli.rs  config.rs  events.rs  git.rs  lib.rs  main.rs  models.rs  picker.rs  projection.rs  storage.rs  tui.rs
tests/: cli_flow.rs
