[package]
name = "journey"
version = "0.1.0"
edition = "2021"
description = "Context persistence for engineering efforts"
license = "MIT"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.28"
dirs = "5.0"
pulldown-cmark = "0.12"
ratatui = "0.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tempfile = "3.10"
thiserror = "1.0"
time = { version = "0.3", features = ["formatting", "parsing"] }

[dev-dependencies]
tempfile = "3.10"
